--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.5.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.services.authentication": "3.1.0",
     "com.unity.services.lobby": "1.1.0",
     "com.unity.services.relay": "1.0.5",
