--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,9 +6,9 @@
     "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.services.authentication": "3.1.0",
+    "com.unity.remote-config": "4.0.0",
+    "com.unity.services.authentication": "3.3.0",
     "com.unity.services.cloudcode": "2.5.1",
-    "com.unity.services.cloudsave": "3.0.0",
     "com.unity.services.deployment": "1.2.0",
     "com.unity.services.lobby": "1.1.0",
     "com.unity.services.relay": "1.0.5",
